force-app/main/default/objects/AuditConfig__mdt/AuditConfig__mdt.object-meta.xml
<CustomObject>
    <label>AuditConfig</label>
    <pluralLabel>AuditConfigs</pluralLabel>
</CustomObject>