force-app/main/default/objects/AuditConfig__mdt/fields/AuditType__c.field-meta.xml
<CustomField>
    <fullName>AuditType__c</fullName>
    <label>AuditType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Sale</fullName>
                <default>true</default>
                <label>Pre-Sale</label>
            </value>
            <value>
                <fullName>During-Sale</fullName>
            </value>
            <value>
                <fullName>Post-Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>