force-app/main/default/objects/AuditConfig__mdt/fields/ExpectedAuditDays__c.field-meta.xml
<CustomField>
    <fullName>ExpectedAuditDays__c</fullName>
    <description>admin sets a number of days (e.g., 3, 7, 10, etc.)</description>
    <label>ExpectedAuditDays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>