force-app/main/default/objects/AuditConfig__mdt/fields/RecordTypeApiName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeApiName__c</fullName>
    <label>RecordTypeApiName</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity_Audit</fullName>
                <default>true</default>
                <label>Opportunity_Audit</label>
            </value>
            <value>
                <fullName>Lead_Audit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>