force-app/main/default/objects/AuditConfig__mdt/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Just for Leads</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Working - Contacted</fullName>
                <default>true</default>
                <label>Working - Contacted</label>
            </value>
            <value>
                <fullName>Closed - Not Converted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>