force-app/main/default/objects/AuditConfig__mdt/listViews/All_Details.listView-meta.xml
<ListView>
    <fullName>All_Details</fullName>
    <columns>MasterLabel</columns>
    <columns>Comments__c</columns>
    <columns>ExpectedAuditDays__c</columns>
    <columns>IsActive__c</columns>
    <columns>ObjectType__c</columns>
    <columns>RecordTypeApiName__c</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <columns>AuditType__c</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <label>All Details</label>
</ListView>